--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
- Theme Name:   Understrap Child
- Theme URI:    https://understrap.com
+ Theme Name:   Los Rancheros Kiwanis Custom Child Theme
+ Theme URI:    https://www.atomicpx.com/
  Description:  Understrap Child Theme
  Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
+ Author URI:   https://github.com/understrap/los-rancheros-kiwanis-child/graphs/contributors
  Template:     understrap
- Version:      1.1.0
+ Version:      0.0.1
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  understrap-child
+ Text Domain:  los-rancheros-kiwanis-child
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: understrap/understrap-child
+ GitHub Theme URI: tripdog/los-rancheros-kiwanis-child
 */
