update browser-sync config

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
  Theme Name:   Los Rancheros Kiwanis Custom Child Theme
  Theme URI:    https://www.atomicpx.com/
  Description:  Understrap Child Theme
- Author:       the Understrap Contributors
+ Author:       Atomic – Tom Phillips
  Author URI:   https://github.com/understrap/los-rancheros-kiwanis-child/graphs/contributors
  Template:     understrap
  Version:      0.0.1
